--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,16 @@
 # Thymeleaf
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
-#Spring Data
-spring.datasource.url=jdbc:mysql://localhost:3306/gerenciador?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
-
-#heroku
+spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 #spring.datasource.driverClassName=org.postgresql.Driver
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl_auto=update
 #Spring Security
 spring.queries.users-query=SELECT usr_email as username, usr_senha as password, 1 as active FROM usr_usuarios WHERE usr_email=?
 spring.queries.roles-query=SELECT usr_email as username, 'ROLE_USER' as role FROM usr_usuarios WHERE usr_email=?
-
-
-#heroku login
-#(acessar pasto do projeto)
-#git init
-#git add .
-#git commit -m "comentario"
-#heroku create
-#heroku addons:create heroku-postgresql
-#git push heroku master
